# poly-interp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  fp_poly_test
bench/: interp_bench.cpp  kronecker_mul_bench.cpp  ops_bench.cpp  ops_bench_flint.cpp
data/: bench.csv  bench_NTL.csv  bench_flint.csv  bench_kronecker.csv  bench_naive.csv  bench_ops.csv  bench_ops_flint.csv  interp_vs_flint.md  ops_vs_flint.md
include/poly_interp/: bench_flint.cpp  fp_poly.hpp  prime_field.hpp
scripts/: plot.py  plot_interp_all.py  plot_md_tables.py
tests/: fp_poly_test.cpp  interp_correctness_test.cpp  prime_field_test.cpp
